--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3>Statistics</h3>
           </a>
 
-          <a href="" class="">
+          <a href="adminevent.html" class="">
             <svg
               width="27"
               height="27"
@@ -486,7 +486,7 @@
                   </label>
                   <img
                     src="images/img2.png"
-                    alt="yes,just preview the image here"
+                    alt="Hey,We noticed you havent add image here."
                     id="result"
                   />
                 </div>
