--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="navlinks">
           <div class="avatar hod">
-            <img src="images/dummy avatar.jpg" alt="avatar" />
+            <img src="images/main_p.jpg" alt="avatar" />
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
