--- a/niransindex.html
+++ b/niransindex.html
@@ -21,7 +21,7 @@
 
     <section class="first">
       <div class="ourevents">
-        <h2>Our events</h2>
+          <h2>Our events</h2>
         <p>Looking for events to attend? We've got loads of amazing events for you. You can explore by locations, recommendations... We have you covered.</p>
 
 <!-- Lagos -->
@@ -38,51 +38,73 @@
     <section class="main">
       <p class="rec">Recommended</p>
 
-      <div class="box one">
-        <img src="assets/img/circusbackground.png" alt="image">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+      <div class="box">
+        <img src="images/unsplash_Q_kdjKxntH8.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="images/unsplash_Oalh2MojUuk.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+      <div class="box">
+        <img src="images/unsplash_73_kRzs9sqo.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
 
       <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+        <img src="images/unsplash_wD1LRb9OeEo.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
 
       <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+        <img src="images/unsplash_EVgsAbL51Rk.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
 
       <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+        <img src="images/unsplash_xRlI-L-kvrw.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
 
       <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+        <img src="images/unsplash_nwLTVwb7DbU.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
 
       <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
-
-      <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
-
-      <div class="box">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+        <img src="images/unsplash_urVHqIv-__4.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
       </div>
