--- a/niransindex.html
+++ b/niransindex.html
@@ -38,6 +38,7 @@
     <section class="main">
       <p class="rec">Recommended</p>
 
+<!-- Box 1 -->
       <div class="box">
         <img src="images/unsplash_Q_kdjKxntH8.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
@@ -60,54 +61,182 @@
           </div>
         </div>
       </div>
+<!-- Box 1 ends -->
 
+<!-- Box 2 -->
       <div class="box">
         <img src="images/unsplash_Oalh2MojUuk.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+        </div>
+<!-- Box 2 ends -->
+
+<!-- Box 3 -->
       <div class="box">
         <img src="images/unsplash_73_kRzs9sqo.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+      </div>
+<!-- Box 3 ends -->
+
+<!-- Box 4 -->
       <div class="box">
         <img src="images/unsplash_wD1LRb9OeEo.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+      </div>
+<!-- Box 4 ends -->
+
+<!-- Box 5 -->
       <div class="box">
         <img src="images/unsplash_EVgsAbL51Rk.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+      </div>
+      <!-- Box 5 ends -->
+
+<!-- Box 6 -->
       <div class="box">
         <img src="images/unsplash_xRlI-L-kvrw.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
+      </div>
+<!--Box 6 ends -->
+
+<!--Box 7 -->
       <div class="box">
         <img src="images/unsplash_nwLTVwb7DbU.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
-      </div>
 
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+      </div>
+      </div>
+      <!-- Box 7 ends -->
+
+<!-- Box 8 -->
       <div class="box">
         <img src="images/unsplash_urVHqIv-__4.png" alt="image">
         <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+        </div>
       </div>
+<!-- Box 8 ends -->
 
     </section>
   </body>
