--- a/cards.html
+++ b/cards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Events</title>
+    <title>Events Details - Information about each Events</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="index.html">
+          <a href="" class="current-list">
             <svg
               width="28"
               height="27"
@@ -59,7 +59,7 @@
             <h3>Statistics</h3>
           </a>
 
-          <a href="" class="current-list">
+          <a href="adminevent.html" class="">
             <svg
               width="27"
               height="27"
@@ -139,13 +139,7 @@
       <!-- NAVIGATION2 -->
       <div class="main_container">
         <div class="nav2">
-          <input
-            type="text"
-            placeholder="Search event"
-            class="search_field"
-            id="eventinput"
-            onkeyup="searchEvents()"
-          />
+          <h2>Chavron Pvt Ltd.</h2>
           <div class="avatar_bell">
             <img src="images/bell.svg" alt="notification on arrival" />
             <div class="avalon">
@@ -156,235 +150,73 @@
         </div>
       </div>
 
-      <!-- =================================
-        EVENTS,SELECT BETWEEN UPCOMING and ongoing
-        ========================= -->
-      <div class="mm_event">
-        <div class="container s_flex">
-          <div class="event_txt">
-            <h4>My Events</h4>
-            <p>Showing <span>6 events </span>options</p>
+      <!-- ===========
+        CARD DETAILS
+    ====================== -->
+      <div class="container detail_wrap">
+        <div class="back-img">
+          <a href="">Back</a>
+          <img src="images/Pray.jpg" />
+        </div>
+
+        <!-- The Details -->
+        <div class="dts">
+          <button>Edits</button>
+          <h3>Events Overview</h3>
+          <h5>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+            iusto corporis quod rerum enim eveniet minima dolor. Cum, quo
+            incidunt dignissimos nemo ratione soluta.
+          </h5>
+
+          <div class="d_date">
+            <h4>
+              Date <br />
+              <span>Dec 20,2022</span>
+            </h4>
+            <h4>
+              Location <br />
+              <span>Lagos</span>
+            </h4>
+            <h4>
+              Tickets <br />
+              <span>10,000 Seats</span>
+            </h4>
           </div>
 
-          <div class="f_sort">
-            <label for="sorting">Sort by:</label>
-            <select name="sort" id="">
-              <option value="">Ongoing</option>
-              <option value="">Upcoming</option>
-              <option value="">Recents</option>
-            </select>
+          <div class="t_desc">
+            <h4>Description</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Quibusdam ullam velit cumque odio, esse consequuntur iste at
+              veniam sint ipsum. Excepturi blanditiis sit consectetur quibusdam
+              nesciunt, mollitia omnis. Labore, sit! Voluptatem consequatur
+              repellendus temporibus nulla distinctio tempore, aliquam harum ut
+              aspernatur inventore a natus vel accusamus eaque cumque animi
+              voluptatum iure commodi alias eius facere. Praesentium est
+              adipisci culpa officiis. Quo tenetur architecto quos
+              exercitationem cumque, quis corrupti in quia mollitia blanditiis
+              minima est ipsam magnam et eaque veritatis voluptate neque.
+              Adipisci eius omnis quos at, error recusandae consequatur nulla.
+              Impedit, vitae sit? Assumenda iste, itaque natus at, commodi eaque
+              eos aliquam, odit excepturi molestias pariatur quod. Sapiente,
+              nesciunt hic aliquid quo velit obcaecati quod, quas doloremque
+              animi rem asperiores! In repellendus doloribus accusantium
+              nesciunt voluptas maxime, enim cumque quis assumenda nemo est
+              saepe quisquam deleniti quia nisi distinctio perferendis
+              laudantium vitae molestiae iusto quae aliquam hic porro! Magni,
+              atque?
+            </p>
+
+            <p class="more_p">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam,
+              nostrum quia? Ullam at vitae qui quis accusamus sunt sapiente
+              tempora unde molestias explicabo sed, iusto harum! Quidem ut
+              assumenda laborum.
+            </p>
           </div>
         </div>
       </div>
-
-      <!--=============
-        EVENT CARDS
-        ============== -->
-      <section class="e_cards container" id="myCards">
-        <!--Main CARD-->
-        <div class="main_card">
-          <a href="cards.html">
-            <img src="images/bible.jpg" alt="" />
-            <div class="card_d">
-              <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                dolorum earum eius culpa maxime...
-              </p>
-
-              <div class="ff_sort">
-                <figure>
-                  <img src="images/calendar.svg" alt="" />
-                  <h4>Dec 28,2022</h4>
-                </figure>
-                <figure>
-                  <img src="images/venue.svg" alt="" />
-                  <h4>Abuja</h4>
-                </figure>
-                <figure>
-                  <img src="images/calendar.svg" alt="" />
-                  <h4>10,000 Seats</h4>
-                </figure>
-              </div>
-
-              <!-- 2img lap on each other -->
-              <div class="lap">
-                <img src="images/lap1.jpg" />
-                <img src="images/lap2.jpg" class="f_lap" />
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <!--Main CARD-->
-        <div class="main_card">
-          <a href="#">
-            <img src="images/Pray.jpg" alt="" />
-            <div class="card_d">
-              <h3>What if i don't sit amet consectetur adipisicing elit.</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                dolorum earum eius culpa maxime...
-              </p>
-
-              <div class="ff_sort">
-                <figure>
-                  <img src="images/calendar.svg" alt="" />
-                  <h4>Dec 20,2022</h4>
-                </figure>
-                <figure>
-                  <img src="images/venue.svg" alt="" />
-                  <h4>Lagos</h4>
-                </figure>
-                <figure>
-                  <img src="images/calendar.svg" alt="" />
-                  <h4>10,000 Seats</h4>
-                </figure>
-              </div>
-
-              <!-- 2img lap on each other -->
-              <div class="lap">
-                <img src="images/lap1.jpg" />
-                <img src="images/lap2.jpg" class="f_lap" />
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <!--Main CARD-->
-        <div class="main_card">
-          <img src="images/img4.png" alt="" />
-          <div class="card_d">
-            <h3>Break me ipsum dolor sit amet consectetur adipisicing elit.</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-              dolorum earum eius culpa maxime...
-            </p>
-
-            <div class="ff_sort">
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>Dec 20,2022</h4>
-              </figure>
-              <figure>
-                <img src="images/venue.svg" alt="" />
-                <h4>Lagos</h4>
-              </figure>
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>10,000 Seats</h4>
-              </figure>
-            </div>
-
-            <!-- 2img lap on each other -->
-            <div class="lap">
-              <img src="images/lap1.jpg" />
-              <img src="images/lap2.jpg" class="f_lap" />
-            </div>
-          </div>
-        </div>
-
-        <!--Main CARD-->
-        <div class="main_card">
-          <img src="images/img1.png" alt="" />
-          <div class="card_d">
-            <h3>
-              Contol this ipsum dolor sit amet consectetur adipisicing elit.
-            </h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-              dolorum earum eius culpa maxime...
-            </p>
-
-            <div class="ff_sort">
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>Dec 20,2022</h4>
-              </figure>
-              <figure>
-                <img src="images/venue.svg" alt="" />
-                <h4>Lagos</h4>
-              </figure>
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>10,000 Seats</h4>
-              </figure>
-            </div>
-
-            <!-- 2img lap on each other -->
-            <div class="lap">
-              <img src="images/lap1.jpg" />
-              <img src="images/lap2.jpg" class="f_lap" />
-            </div>
-          </div>
-        </div>
-
-        <!--Main CARD-->
-        <div class="main_card">
-          <img src="images/img1.png" alt="" />
-          <div class="card_d">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-              dolorum earum eius culpa maxime...
-            </p>
-
-            <div class="ff_sort">
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>Dec 20,2022</h4>
-              </figure>
-              <figure>
-                <img src="images/venue.svg" alt="" />
-                <h4>Lagos</h4>
-              </figure>
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>10,000 Seats</h4>
-              </figure>
-            </div>
-
-            <!-- 2img lap on each other -->
-            <div class="lap">
-              <img src="images/lap1.jpg" />
-              <img src="images/lap2.jpg" class="f_lap" />
-            </div>
-          </div>
-        </div>
-
-        <!--Main CARD-->
-        <div class="main_card">
-          <img src="images/img1.png" alt="" />
-          <div class="card_d">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-              dolorum earum eius culpa maxime...
-            </p>
-
-            <div class="ff_sort">
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>Dec 20,2022</h4>
-              </figure>
-              <figure>
-                <img src="images/venue.svg" alt="" />
-                <h4>Lagos</h4>
-              </figure>
-              <figure>
-                <img src="images/calendar.svg" alt="" />
-                <h4>10,000 Seats</h4>
-              </figure>
-            </div>
-
-            <!-- 2img lap on each other -->
-            <div class="lap">
-              <img src="images/lap1.jpg" />
-              <img src="images/lap2.jpg" class="f_lap" />
-            </div>
-          </div>
-        </div>
-      </section>
     </section>
 
     <!--==============
@@ -393,6 +225,7 @@
     <script src="assets/js/navlinks.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/form.js"></script>
-    <script src="assets/js/filter.js"></script>
+
+    <!-- This event trigger the images Selection -->
   </body>
 </html>
