--- a/niransindex.html
+++ b/niransindex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <link rel="stylesheet" href="niran.css">
+    <link rel="stylesheet" href="assets/css/niran.css">
 
     <title>Event Page</title>
   </head>
@@ -20,9 +20,13 @@
     </header>
 
     <section class="first">
+
       <div class="ourevents">
           <h2>Our events</h2>
-        <p>Looking for events to attend? We've got loads of amazing events for you. You can explore by locations, recommendations... We have you covered.</p>
+
+        </center> <p>Looking for events to attend? We've got loads of amazing events for you. You can explore by locations, recommendations... We have you covered.</p>
+        <center>
+
 
 <!-- Lagos -->
         <div class="lagos">
@@ -32,10 +36,11 @@
         </div>
 <!-- Lagos ends -->
      </div>
+
     </section>
 
 
-    <section class="main">
+    <section class="main1">
       <p class="rec">Recommended</p>
 
 <!-- Box 1 -->
@@ -237,7 +242,314 @@
         </div>
       </div>
 <!-- Box 8 ends -->
-
     </section>
+
+<!-- main2 -->
+    <section class="main2">
+
+      <p class="upcoming">Upcoming Events</p>
+
+<!-- Box 1 -->
+      <div class="box">
+        <img src="images/unsplash_lVTtqIY6pL0.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 1 ends -->
+
+<!-- Box 2 -->
+      <div class="box">
+        <img src="images/unsplash_F2KRf_QfCqw.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 2 ends -->
+
+<!-- Box 3 -->
+      <div class="box">
+        <img src="images/img3.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 3 ends -->
+
+<!-- Box 4 -->
+      <div class="box">
+        <img src="images/unsplash_AfgJpWQH4lw.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 4 ends -->
+
+<!-- Box 5 -->
+      <div class="box">
+        <img src="images/img2.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 5 ends -->
+
+<!-- Box 6 -->
+      <div class="box">
+        <img src="images/unsplash_wD1LRb9OeEo.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 6 ends -->
+
+<!-- Box 7 -->
+      <div class="box">
+        <img src="images/unsplash_rE9vgD_TXgM.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 7 ends -->
+
+<!-- Box 8 -->
+      <div class="box">
+        <img src="images/unsplash_hTUyrn0UHZw.png" alt="image">
+        <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Rea Faucibu Dictum...</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi, neque metus...</p>
+
+        <div class="dls">
+
+          <div class="date">
+            <img src="icons/ic_round-date-range.png" alt="date"><p>Dec 20, 2022</p>
+          </div>
+
+          <div class="location">
+            <img src="icons/bytesize_location.png" alt="location">
+            <p>Lagos</p>
+          </div>
+
+          <div class="seats">
+            <img src="icons/icomoon-free_ticket.png" alt="seats">
+            <p>10,000 Seats</p>
+          </div>
+
+        </div>
+
+      </div>
+<!-- Box 8 ends -->
+    </section>
+<!-- main2 ends -->
+
+<!-- Icons and numbers -->
+
+  <div class="icons_numbers">
+    <img src="assets/img/dashicons_arrow-left-alt2.png" alt="dashicon" class="fdash">
+
+    <div class="numbers">
+      <div class="one_line">
+        <p class="one">1</p>
+        <div class="line"></div>
+      </div>
+
+      <p>2</p>
+      <p>3</p>
+      <p>4</p>
+
+      <div class="dots">
+        <b><p>.</p></b>
+        <b><p>.</p></b>
+        <b><p>.</p></b>
+      </div>
+
+    </div>
+
+
+    <img src="assets/img/dashicons_arrow-left-alt2.png" alt="dashicon" class="sdash">
+  </div>
+
+<!-- Icons and numbers end -->
+
+
+<section class="end">
+
+  <div class="last1">
+    <h2>Your<span class="p">Pass</span></h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. </p>
+  </div>
+
+  <div class="last2">
+    <h3>Company</h3>
+    <p>About</p>
+    <p>Contact Us</p>
+    <p>Privacy Policy</p>
+    <p>Terms of Service</p>
+  </div>
+
+  <hr>
+
+  <div class="last3">
+    <h3>Services</h3>
+    <p>Events</p>
+  </div>
+
+  <div class="last4">
+    <center>
+      <img src="assets/img/akar-icons_instagram-fill.png" class="licon" alt="instagram icon">
+      <img src="assets/img/akar-icons_youtube-fill.png" alt="youtube icon" class="licon">
+      <img src="assets/img/akar-icons_twitter-fill.png" alt="twitter icon" class="licon">
+      <img src="assets/img/bx_bxl-linkedin.png" alt="linkedin icon" class="licon">
+      <img src="assets/img/bx_bxl-facebook.png" alt="facebook icon" class="licon">
+    </center>
+  </div>
+
+  <center>
+    <div class="last5">
+      <img src="assets/img/bx_bx-copyright.png" alt="copyright icon" class="licon cicon">
+
+      <p class="pp">2022 Yourpass </p>
+
+      <div class="line2"></div>
+
+      <p class="lp"> All Rights Reserved.</p>
+
+    </div>
+  </center>
+</section>
+
   </body>
 </html>
