--- a/cards.html
+++ b/cards.html
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="" class="current-list">
+          <a href="adminevent.html" class="current-list">
             <svg
               width="28"
               height="27"
@@ -155,7 +155,7 @@
     ====================== -->
       <div class="container detail_wrap">
         <div class="back-img">
-          <a href="">Back</a>
+          <a href="adminevent.html">Back</a>
           <img src="images/Pray.jpg" />
         </div>
 
