--- a/niransindex.html
+++ b/niransindex.html
@@ -12,10 +12,19 @@
     <header>
       <nav>
         <div class="yourpass">
-          <h1>Your<span class="p">Pass</span></h1>
-          <div class="why">
-          </div>
+
+          <h1>Your<span>Pass</span></h1>
+          <div class="why"></div>
+
         </div>
+
+          <ul>
+            <li>Events</li>
+            <li>About Us</li>
+            <li><button class="a">Sign Up</button></li>
+            <li><button class="b">Login</button></li>
+          </ul>
+
       </nav>
     </header>
 
@@ -24,7 +33,7 @@
       <div class="ourevents">
           <h2>Our events</h2>
 
-        </center> <p>Looking for events to attend? We've got loads of amazing events for you. You can explore by locations, recommendations... We have you covered.</p>
+        </center> <p class="look">Looking for events to attend? We've got loads of amazing events for you. You can explore by locations, recommendations... We have you covered.</p>
         <center>
 
 
@@ -40,8 +49,8 @@
     </section>
 
 
+    <p class="rec">Recommended</p>
     <section class="main1">
-      <p class="rec">Recommended</p>
 
 <!-- Box 1 -->
       <div class="box">
@@ -245,9 +254,9 @@
     </section>
 
 <!-- main2 -->
-    <section class="main2">
 
-      <p class="upcoming">Upcoming Events</p>
+<p class="upcoming">Upcoming Events</p>
+    <section class="main2">
 
 <!-- Box 1 -->
       <div class="box">
@@ -506,7 +515,7 @@
 
 
 <section class="end">
-
+<div class="last">
   <div class="last1">
     <h2>Your<span class="p">Pass</span></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. </p>
@@ -520,12 +529,13 @@
     <p>Terms of Service</p>
   </div>
 
-  <hr>
+  <hr class="hr1">
 
   <div class="last3">
     <h3>Services</h3>
     <p>Events</p>
   </div>
+</div>
 
   <div class="last4">
     <center>
