--- a/request_data.html
+++ b/request_data.html
@@ -155,69 +155,42 @@
       <!-- ===========
         CARD DETAILS
     ====================== -->
-      <div class="container detail_wrap">
-        <div class="back-img">
-          <a href="adminevent.html">Back</a>
-          <img src="images/Pray.jpg" />
+      <div class="container detail_wrap rr_req">
+       <form action="cards.html">
+        <div class="back-img back_">
+          <a href="cards.html">Back</a>
         </div>
 
-        <!-- The Details -->
-        <div class="dts">
-          <button class="update"><a href="request_data.html"> Edit</a></button>
-          <h3>Events Overview</h3>
-          <h5>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-            iusto corporis quod rerum enim eveniet minima dolor. Cum, quo
-            incidunt dignissimos nemo ratione soluta.
-          </h5>
+        <img src="images/Pray.jpg" />
+        <div class="dd_entry">
+          <button type="submit" class="update_data">Update</button>
+          <label for="">
+            Event Overview
+           <textarea name="" id=""></textarea>
+          </label>
 
-          <div class="d_date">
-            <h4>
-              Date <br />
-              <span>Dec 20,2022</span>
-            </h4>
-            <h4>
-              Location <br />
-              <span>Lagos</span>
-            </h4>
-            <h4>
-              Tickets <br />
-              <span>10,000 Seats</span>
-            </h4>
+          <div class="req">
+            <label for="date">
+              Date
+              <input type="date" >
+            </label>
+            <label for="date">
+              Location
+              <input type="text" >
+            </label>
+            <label for="date">
+              Tickets
+              <input type="text" >
+            </label>
           </div>
+          <label for="description">
+            Description
+          <textarea name="Description" class="descript"></textarea>
+          </label>
 
-          <div class="t_desc">
-            <h4>Description</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Quibusdam ullam velit cumque odio, esse consequuntur iste at
-              veniam sint ipsum. Excepturi blanditiis sit consectetur quibusdam
-              nesciunt, mollitia omnis. Labore, sit! Voluptatem consequatur
-              repellendus temporibus nulla distinctio tempore, aliquam harum ut
-              aspernatur inventore a natus vel accusamus eaque cumque animi
-              voluptatum iure commodi alias eius facere. Praesentium est
-              adipisci culpa officiis. Quo tenetur architecto quos
-              exercitationem cumque, quis corrupti in quia mollitia blanditiis
-              minima est ipsam magnam et eaque veritatis voluptate neque.
-              Adipisci eius omnis quos at, error recusandae consequatur nulla.
-              Impedit, vitae sit? Assumenda iste, itaque natus at, commodi eaque
-              eos aliquam, odit excepturi molestias pariatur quod. Sapiente,
-              nesciunt hic aliquid quo velit obcaecati quod, quas doloremque
-              animi rem asperiores! In repellendus doloribus accusantium
-              nesciunt voluptas maxime, enim cumque quis assumenda nemo est
-              saepe quisquam deleniti quia nisi distinctio perferendis
-              laudantium vitae molestiae iusto quae aliquam hic porro! Magni,
-              atque?
-            </p>
-
-            <p class="more_p">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam,
-              nostrum quia? Ullam at vitae qui quis accusamus sunt sapiente
-              tempora unde molestias explicabo sed, iusto harum! Quidem ut
-              assumenda laborum.
-            </p>
-          </div>
+          
         </div>
+       </form>
       </div>
     </section>
 
