--- a/adminevent.html
+++ b/adminevent.html
@@ -184,7 +184,7 @@
         <!--Main CARD-->
         <div class="main_card">
           <a href="cards.html">
-            <img src="images/bible.jpg" alt="" />
+            <img src="images/card5x.png" alt="" />
             <div class="card_d">
               <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
               <p>
@@ -202,7 +202,7 @@
                   <h4>Abuja</h4>
                 </figure>
                 <figure>
-                  <img src="images/calendar.svg" alt="" />
+                  <img src="images/Seats.svg" alt="" />
                   <h4>10,000 Seats</h4>
                 </figure>
               </div>
@@ -219,7 +219,7 @@
         <!--Main CARD-->
         <div class="main_card">
           <a href="#">
-            <img src="images/Pray.jpg" alt="" />
+            <img src="images/card2.png" alt="" />
             <div class="card_d">
               <h3>What if i don't sit amet consectetur adipisicing elit.</h3>
               <p>
@@ -237,7 +237,7 @@
                   <h4>Lagos</h4>
                 </figure>
                 <figure>
-                  <img src="images/calendar.svg" alt="" />
+                  <img src="images/Seats.svg" alt="" />
                   <h4>10,000 Seats</h4>
                 </figure>
               </div>
@@ -253,7 +253,7 @@
 
         <!--Main CARD-->
         <div class="main_card">
-          <img src="images/img4.png" alt="" />
+          <img src="images/card1.png" alt="" />
           <div class="card_d">
             <h3>Break me ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>
@@ -271,7 +271,7 @@
                 <h4>Lagos</h4>
               </figure>
               <figure>
-                <img src="images/calendar.svg" alt="" />
+                <img src="images/Seats.svg" alt="" />
                 <h4>10,000 Seats</h4>
               </figure>
             </div>
@@ -286,7 +286,7 @@
 
         <!--Main CARD-->
         <div class="main_card">
-          <img src="images/img1.png" alt="" />
+          <img src="images/card4.png" alt="" />
           <div class="card_d">
             <h3>
               Contol this ipsum dolor sit amet consectetur adipisicing elit.
@@ -306,7 +306,7 @@
                 <h4>Lagos</h4>
               </figure>
               <figure>
-                <img src="images/calendar.svg" alt="" />
+                <img src="images/Seats.svg" alt="" />
                 <h4>10,000 Seats</h4>
               </figure>
             </div>
@@ -321,7 +321,7 @@
 
         <!--Main CARD-->
         <div class="main_card">
-          <img src="images/img1.png" alt="" />
+          <img src="images/card2.png" alt="" />
           <div class="card_d">
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>
@@ -339,7 +339,7 @@
                 <h4>Lagos</h4>
               </figure>
               <figure>
-                <img src="images/calendar.svg" alt="" />
+                <img src="images/Seats.svg" alt="" />
                 <h4>10,000 Seats</h4>
               </figure>
             </div>
@@ -354,7 +354,7 @@
 
         <!--Main CARD-->
         <div class="main_card">
-          <img src="images/img1.png" alt="" />
+          <img src="images/card2.png" alt="" />
           <div class="card_d">
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>
@@ -372,7 +372,7 @@
                 <h4>Lagos</h4>
               </figure>
               <figure>
-                <img src="images/calendar.svg" alt="" />
+                <img src="images/Seats.svg" alt="" />
                 <h4>10,000 Seats</h4>
               </figure>
             </div>
