--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h3>Attendee</h3>
           </a>
 
-          <a class="">
+          <a href="settings.html" class="">
             <svg
               width="27"
               height="27"
