--- a/cards.html
+++ b/cards.html
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="adminevent.html" class="current-list">
+          <a href="index.html" class="current-list">
             <svg
               width="28"
               height="27"
@@ -43,7 +43,7 @@
             <h3>Overview</h3>
           </a>
 
-          <a href="" class="">
+          <a href="stats.html" class="">
             <svg
               width="27"
               height="27"
@@ -83,7 +83,7 @@
             <h3>Events</h3>
           </a>
 
-          <a href="" class="">
+          <a href="attendee.html" class="">
             <svg
               width="27"
               height="27"
@@ -103,7 +103,7 @@
             <h3>Attendee</h3>
           </a>
 
-          <a class="">
+          <a  href="settings.html" class="">
             <svg
               width="27"
               height="27"
