--- a/request_data.html
+++ b/request_data.html
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="adminevent.html" class="current-list">
+          <a href="" class="current-list">
             <svg
               width="28"
               height="27"
@@ -103,7 +103,7 @@
             <h3>Attendee</h3>
           </a>
 
-          <a class="">
+          <a href="" class="">
             <svg
               width="27"
               height="27"
