--- a/settings.html
+++ b/settings.html
@@ -43,7 +43,7 @@
             <h3>Overview</h3>
           </a>
 
-          <a href="" class="">
+          <a href="stats.html" class="">
             <svg
               width="27"
               height="27"
@@ -83,7 +83,7 @@
             <h3>Events</h3>
           </a>
 
-          <a href="" class="">
+          <a href="attendee.html" class="">
             <svg
               width="27"
               height="27"
@@ -103,7 +103,7 @@
             <h3>Attendee</h3>
           </a>
 
-          <a href="" class="current-list">
+          <a href="settings.html" class="current-list">
             <svg
               width="27"
               height="27"
