--- a/settings.html
+++ b/settings.html
@@ -241,8 +241,8 @@
                 <h3>Where you are logged in</h3>
 
                 <div class="track">
-                  <div class="device">
-                    <h4>Desktop - Lagos, Nigeria</h4>
+                  <div class="device desktop">
+                    <h4 >Desktop - Lagos, Nigeria</h4>
                     <p>Chrome - <span>Active now</span></p>
                   </div>
 
@@ -250,7 +250,7 @@
                 </div>
                 <hr>
                 <div class="track">
-                  <div class="device">
+                  <div class="device phone">
                     <h4>Iphone - Abuja, Nigeria</h4>
                     <p>Safari - <span>Jan 4,2022</span></p>
                   </div>
@@ -259,7 +259,7 @@
                 </div>
                 <hr>
                 <div class="track">
-                  <div class="device">
+                  <div class="device phone">
                     <h4>Samsung - Port Harcout, Nigeria</h4>
                     <p>Mozilla - <span>Active now</span></p>
                   </div>
