--- a/niransindex.html
+++ b/niransindex.html
@@ -487,6 +487,11 @@
 <!-- Icons and numbers -->
 
   <div class="icons_numbers">
+
+  <div class="firstb">
+    <p>First</p>
+  </div>
+
     <img src="assets/img/dashicons_arrow-left-alt2.png" alt="dashicon" class="fdash">
 
     <div class="numbers">
@@ -498,6 +503,9 @@
       <p>2</p>
       <p>3</p>
       <p>4</p>
+      <p class="x">5</p>
+      <p class="x">6</p>
+      <p class="x">7</p>
 
       <div class="dots">
         <b><p>.</p></b>
@@ -507,58 +515,62 @@
 
     </div>
 
-
     <img src="assets/img/dashicons_arrow-left-alt2.png" alt="dashicon" class="sdash">
-  </div>
 
+    <div class="lastb">
+      <p>Last</p>
+    </div>
+  </div>
 <!-- Icons and numbers end -->
 
 
 <section class="end">
-<div class="last">
-  <div class="last1">
-    <h2>Your<span class="p">Pass</span></h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. </p>
-  </div>
+    <div class="last">
+      <div class="last1">
+        <h2>Your<span class="p">Pass</span></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. </p>
+      </div>
 
-  <div class="last2">
-    <h3>Company</h3>
-    <p>About</p>
-    <p>Contact Us</p>
-    <p>Privacy Policy</p>
-    <p>Terms of Service</p>
-  </div>
-
-  <hr class="hr1">
-
-  <div class="last3">
-    <h3>Services</h3>
-    <p>Events</p>
-  </div>
-</div>
-
-  <div class="last4">
-    <center>
-      <img src="assets/img/akar-icons_instagram-fill.png" class="licon" alt="instagram icon">
-      <img src="assets/img/akar-icons_youtube-fill.png" alt="youtube icon" class="licon">
-      <img src="assets/img/akar-icons_twitter-fill.png" alt="twitter icon" class="licon">
-      <img src="assets/img/bx_bxl-linkedin.png" alt="linkedin icon" class="licon">
-      <img src="assets/img/bx_bxl-facebook.png" alt="facebook icon" class="licon">
-    </center>
-  </div>
-
-  <center>
-    <div class="last5">
-      <img src="assets/img/bx_bx-copyright.png" alt="copyright icon" class="licon cicon">
-
-      <p class="pp">2022 Yourpass </p>
-
-      <div class="line2"></div>
-
-      <p class="lp"> All Rights Reserved.</p>
-
+    <div class="last2">
+      <h3>Company</h3>
+      <p>About</p>
+      <p>Contact Us</p>
+      <p>Privacy Policy</p>
+      <p>Terms of Service</p>
     </div>
-  </center>
+
+    <hr class="hr1">
+
+    <div class="last3">
+      <h3>Services</h3>
+      <p>Events</p>
+    </div>
+    </div>
+
+  <hr class="hr2">
+
+    <div class="last4">
+      <center>
+        <img src="assets/img/akar-icons_instagram-fill.png" class="licon" alt="instagram icon">
+        <img src="assets/img/akar-icons_youtube-fill.png" alt="youtube icon" class="licon">
+        <img src="assets/img/akar-icons_twitter-fill.png" alt="twitter icon" class="licon">
+        <img src="assets/img/bx_bxl-linkedin.png" alt="linkedin icon" class="licon">
+        <img src="assets/img/bx_bxl-facebook.png" alt="facebook icon" class="licon">
+      </center>
+    </div>
+
+    <center>
+      <div class="last5">
+        <img src="assets/img/bx_bx-copyright.png" alt="copyright icon" class="licon cicon">
+
+        <p class="pp">2022 Yourpass </p>
+
+        <div class="line2"></div>
+
+        <p class="lp"> All Rights Reserved.</p>
+
+      </div>
+    </center>
 </section>
 
   </body>
