--- a/Landing.html
+++ b/Landing.html
@@ -30,9 +30,15 @@
     </header>
         <main class="main">
             <div class="first">
-                    <h1> The all-in-one event management  platform you need  </h1>
-                     <p> Redifine the way you connect with your Audience with a User-friendly, yet robust set of  customizable and interactive features </p>
-                     <img src="assets/img/Landing page images/Admin Dashboard ui.png" alt="adminimg">                 
+                <div class="great">
+                    <div class="crab">
+                        <div class="mmy">
+                            <h2> The all-in-one event management  platform you need  </h2>
+                            <p> Redifine the way you connect with your Audience with a User-friendly, yet robust set of  customizable and interactive features</p>
+                        </div>
+                        <img src="assets/img/Landing page images/Admin Dashboard ui.png" alt="">
+                    </div>
+                </div>
             </div>
 
             <div class="sec">
