--- a/settings.html
+++ b/settings.html
@@ -211,6 +211,47 @@
 
               <button>Add User</button>
             </div>
+
+            <div class="tabulate">
+              <div class="wrap_head">
+                <div class="hd">
+                  <div class="tt_head">
+                    <input type="checkbox" />
+                    <h4>USERS</h4>
+                  </div>
+
+                  <div class="sta">
+                    <h3 class="blind">DATE ADDED</h3>
+                    <h3 class="blind">LAST ACTIVE</h3>
+                    <h3>STATUS</h3>
+                  </div>
+                </div>
+              </div>
+
+              <div class="wrap_list">
+                <div class="gd">
+                  <div class="tt_list">
+                    <input type="checkbox" />
+                    <div class="mean_">
+                      <img src="images/lap1.jpg" alt="" />
+                      <h4>
+                        DALOT MAGUIRE <br />
+                        <span>msodq2018@gmail.com</span>
+                      </h4>
+                    </div>
+                  </div>
+
+                  <div class="dls">
+                    <h3 class="blind">20 Jun 2021</h3>
+                    <h3 class="blind">15 Apr 2022</h3>
+                    <h3>Owner</h3>
+                    <button class="edit_me">
+                      <img src="images/d_edit.svg" alt="" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <input type="radio" class="tabs_radio" name="settings" id="tab2" />
